file-explorer-lwc/objects/AWSServiceSettings__c/AWSServiceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AWS Service Settings</label>
</CustomObject>