file-explorer-lwc/objects/AWSServiceSettings__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>