file-explorer-lwc/objects/AWSServiceSettings__c/fields/RootFolder__c.field-meta.xml
<CustomField>
    <fullName>RootFolder__c</fullName>
    <label>Root Folder</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>