file-explorer-lwc/objects/AWSServiceSettings__c/fields/S3BucketName__c.field-meta.xml
<CustomField>
    <fullName>S3BucketName__c</fullName>
    <label>S3 Bucket Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>