file-explorer-lwc/objects/AWSServiceSettings__c/fields/SecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecretKey__c</fullName>
    <label>Secret Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>