file-explorer-lwc/objects/AWSServiceSettings__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>