file-explorer-lwc/objects/AWSServiceSettings__c/fields/SignatureAlgorithm__c.field-meta.xml
<CustomField>
    <fullName>SignatureAlgorithm__c</fullName>
    <defaultValue>&quot;AWS4-HMAC-SHA256&quot;</defaultValue>
    <description>Default AWS4-HMAC-SHA256</description>
    <inlineHelpText>Default AWS4-HMAC-SHA256</inlineHelpText>
    <label>Signature Algorithm</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>